[gd_scene format=3 uid="uid://vw3ro8ms2wuy"]

[ext_resource type="Script" uid="uid://cb7jwyr7528hi" path="res://scripts/ui/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control" unique_id=842920870]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Title" type="Label" parent="." unique_id=1659578358]
layout_mode = 0
offset_left = 191.0
offset_top = 103.0
offset_right = 405.0
offset_bottom = 170.0
theme_override_font_sizes/font_size = 48
text = "The Hunt"

[node name="PlayButton" type="Button" parent="." unique_id=973954142]
layout_mode = 0
offset_left = 210.0
offset_top = 200.0
offset_right = 410.0
offset_bottom = 250.0
text = "Let the Hunt begin."

[node name="QuitButton" type="Button" parent="." unique_id=1197833082]
layout_mode = 0
offset_left = 215.0
offset_top = 277.0
offset_right = 415.0
offset_bottom = 327.0
text = "Quit"

[node name="SettingsButton" type="Button" parent="." unique_id=281753642]
layout_mode = 0
offset_left = 208.0
offset_top = 358.0
offset_right = 408.0
offset_bottom = 408.0
text = "Settings"

[node name="SettingsPanel" type="Panel" parent="." unique_id=1424232343]
visible = false
layout_mode = 0
offset_left = 616.0
offset_top = 356.0
offset_right = 1216.0
offset_bottom = 656.0

[node name="VolumeLabel" type="Label" parent="SettingsPanel" unique_id=2075456515]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 46.0
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="SettingsPanel" unique_id=910334639]
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 280.0
offset_bottom = 82.0
value = 100.0

[node name="CloseButton" type="Button" parent="SettingsPanel" unique_id=1792448398]
layout_mode = 0
offset_left = 20.0
offset_top = 236.0
offset_right = 120.0
offset_bottom = 276.0
text = "Close"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="value_changed" from="SettingsPanel/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="SettingsPanel/CloseButton" to="." method="_on_close_button_pressed"]
